--- a/_proyectos/2025-10-30-teaching.md
+++ b/_proyectos/2025-10-30-teaching.md
@@ -4,4 +4,4 @@ date: 2025-10-30T14:00:00.000Z
 proyecto: Enseñanza
 excerpt: Cómo surge y en qué está
 ---
-La idea nace a raíz de buiscar actividades que generen valor en el mayor posible de los sentidos. 
+La idea nace a raíz de buscar actividades que generen valor en el mayor posible de los sentidos. 
