--- a/_proyectos/2025-10-30-teaching.md
+++ b/_proyectos/2025-10-30-teaching.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-date: {}
-proyecto: Enseñanza
-excerpt: Cómo surge y en qué está
+title: "Origen de la idea de enseñar"
+date: 2025-10-30
+proyecto: "Enseñanza"
+excerpt: "Cómo surge y en qué está"
 ---
-## Origen de la idea de enseñar
+## Origen de la idea
 
 
 La idea nace a raíz de buscar actividades que generen valor en el mayor posible de los sentidos.
